--- a/_src/public/calendar-plus-events-by-cat-shortcode.scss
+++ b/_src/public/calendar-plus-events-by-cat-shortcode.scss
@@ -55,6 +55,46 @@
 		text-align: center !important;
 	}
 
+	.calendarp-group-selector {
+		margin-bottom: 20px;
+	}
+
+	.calendarp-group-selector ul {
+		display: flex;
+	}
+
+	.calendarp-group-selector li {
+		list-style-type: none;
+		width: 100%;
+		border: 1px solid black;
+	}
+
+	.calendarp-group-selector li a {
+		display: block;
+		padding: 0.625rem 0.875rem;
+		text-decoration: none;
+		width: 100%;
+		margin: 0;
+		text-align: center;
+		color: black;
+	}
+
+	.calendarp-group-selector li.active a {
+		background: white;
+	}
+
+	.calendarp-group-selector li:first-of-type {
+		border-top-left-radius: 4px;
+		border-bottom-left-radius: 4px;
+	}
+
+	.calendarp-group-selector li:last-of-type {
+		border-left: 0;
+		border-top-right-radius: 4px;
+		border-bottom-right-radius: 4px;
+	}
+
+
 	@media only screen and (min-width: 78.84615em) {
 		.large-2 {
 			width: 16.66667%;
