--- a/_src/public/calendar-plus-events-by-cat-shortcode.scss
+++ b/_src/public/calendar-plus-events-by-cat-shortcode.scss
@@ -36,6 +36,10 @@
 				font-style: italic;
 				font-size: 13px;
 			}
+
+			.calendarp-event-thumbnail {
+				margin-top: 1rem;
+			}
 		}
 
 		.calendarp-events > .calendar-event:first-child {
