--- a/_src/public/components/_templates.scss
+++ b/_src/public/components/_templates.scss
@@ -1,3 +1,8 @@
-.cal-plus-event__meta {
+.cal-plus-data-list {
     list-style: none !important;
+}
+.cal-plus-event__meta-item-icon {
+    display: inline;
+    vertical-align: baseline;
+    font-size: inherit;
 }
